--- a/README.rdoc
+++ b/README.rdoc
@@ -15,7 +15,7 @@ Kickstarter clone in Ruby on Rails, first iteration.
 
 == User Stories
 
-= Iteration 1
+=== Iteration 1
 
 As a Project Owner, I want to be able to create a new project with a title and a description
 As a Project Owner, I want to set a goal for my project
@@ -25,7 +25,7 @@ As a Backer, I want to be able to back a project at a certain reward
 should be able to click on a reward and have it submitted with no page refresh
 once submitted, upon success, the amount raised should update
 
-= Iteration 2
+=== Iteration 2
 
 As a Project Owner, I want to see how many days are left before my project is done
 As a Backer, When viewing a project, it should be very clear whether I have backed the project or not
@@ -33,7 +33,7 @@ As a Project Owner, I want to see the total amount of money raised as of right n
 As a Backer, I want to see all of the projects that I have backed
 As a Backer, I want to see the total amount of money I have spent on projects
 
-= Iteration 3
+=== Iteration 3
 
 As a Project Owner, To help people find my project, I want the ability to add it to a category
 As a Project Owner, To help people find my project, I want the ability to add various tags to my project
@@ -43,19 +43,19 @@ As a Backer, I want the ability to see all the projects associated with a partic
 use infinite scrolling
 As a Backer, I want to see who the owner of a project is
 
-= Iteration 4
+=== Iteration 4
 
 As a Backer, I want to be able to leave comments on a project
 The comment should be submitted via AJAX
 As a Backer, I want the ability to leave comments on a project owner
 The comment should be submitted via AJAX
 
-= Iteration 5
+=== Iteration 5
 
 As a Project Owner, I want to see how many people have funded my project at each reward
 As a Backer, I want to be notified when any projects I am backing meet their goal and are fully funded
 
-= Story Backlog
+=== Story Backlog
 
 As a user, I would like to see how many projects have been successfully funded
 As a user, I would like to see how many total people have funded projects
